--- a/src/components/UI/Counter/Counter.module.css
+++ b/src/components/UI/Counter/Counter.module.css
@@ -1,4 +1,6 @@
 .counter {
+  --foreground: #000;
+
   display: flex;
   background-color: var(--primary-light);
   padding: 8px 16px;
@@ -19,6 +21,7 @@
     border: none;
     background-color: transparent;
     border-radius: 4px;
+    color: var(--foreground);
   }
 
   /* Hide spinner buttons for webkit browsers like Chrome and Safari */
@@ -37,4 +40,5 @@
 .counter-icon {
   min-width: 24px;
   min-height: 24px;
+  color: var(--foreground);
 }
