--- a/src/pages/Checkout/Checkout.module.css
+++ b/src/pages/Checkout/Checkout.module.css
@@ -40,3 +40,8 @@
     object-fit: cover;
   }
 }
+
+.img-container.dark {
+  width: 400px;
+  height: 400px;
+}
